# DUMB-Soundchip-Toolbox

./: CMakeLists.txt  README.md  main.cpp
src/: general.h  junk.cpp  kbhit.cpp  kbhit.h  main.cpp  pcm.cpp  pcm.h  tuning.cpp  tuning.h
